[refactor]refactor] update getWeeklyMenu logic